--- a/src/main/webapp/app/common/primary/login/Login.html
+++ b/src/main/webapp/app/common/primary/login/Login.html
@@ -4,6 +4,8 @@
     <input type="text" id="username" name="username" v-model="form.username" />
     <label for="password">Password</label>
     <input type="password" id="password" name="password" v-model="form.password" />
-    <input type="submit" value="Submit" class="btn btn-block" />
+    <label for="remember">Remember Me</label>
+    <input type="checkbox" id="remember" name="rememberMe" v-model="form.rememberMe" />
+    <input type="submit" id="submit" value="Submit" class="btn btn-block" />
   </form>
 </div>
