Add logger, change welcome context

--- a/src/main/webapp/app/common/primary/welcome/Welcome.html
+++ b/src/main/webapp/app/common/primary/welcome/Welcome.html
@@ -1,4 +1,4 @@
-<div id="generator">
+<div id="welcome">
   <img alt="Vue logo" src="/content/images/VueLogo.png" />
   <br />
   <img alt="JHipster logo" src="../../../../content/images/JHipster-Lite-neon-green.png" />
