Add User interface and authenticate with token

--- a/src/main/webapp/app/common/primary/welcome/Welcome.html
+++ b/src/main/webapp/app/common/primary/welcome/Welcome.html
@@ -2,7 +2,7 @@
   <img alt="Vue logo" src="/content/images/VueLogo.png" />
   <br />
   <img alt="JHipster logo" src="../../../../content/images/JHipster-Lite-neon-green.png" />
-  <h1>{{ appName }}: Vue 3 + TypeScript + Vite</h1>
+  <h1>JHipster-lite: Vue 3 + TypeScript + Vite</h1>
   <p>
     Recommended IDE setup:
     <a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VSCode</a> +
@@ -18,4 +18,6 @@
     Edit
     <code>src/main/webapp/app/common/primary/app/App.vue</code> to test hot module replacement.
   </p>
+
+  <button id="identity" @click.prevent="onClick">CHECK IDENTITY</button>
 </div>
